--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -1,146 +1,146 @@
 {
-	"board.help.pins.press": "Press on a calculation on the board screen to unpin it",
+  "board.help.pins.press": "Press on a calculation on the board screen to unpin it",
 
-	"board.help.pins.longPress": "Long press on a calculation on the board screen to reveal chaos token for this calculation",
-	"board.help.pins.toggle": "If you have pinned calculations, you can press on its block on the board page to show/hide it",
+  "board.help.pins.longPress": "Long press on a calculation on the board screen to reveal chaos token for this calculation",
+  "board.help.pins.toggle": "If you have pinned calculations, you can press on its block on the board page to show/hide it",
 
-	"board.help.calculator.history.actions": "Swipe left on a calculation to see an additional menu",
-	"board.help.calculator.history.remove": "Remove a calculation",
-	"board.help.calculator.history.setName": "Name a calculation",
-	"board.help.calculator.history.pin": "Pin a calculation on the top of the list and on the board screen",
+  "board.help.calculator.history.actions": "Swipe left on a calculation to see an additional menu",
+  "board.help.calculator.history.remove": "Remove a calculation",
+  "board.help.calculator.history.setName": "Name a calculation",
+  "board.help.calculator.history.pin": "Pin a calculation on the top of the list and on the board screen",
 
-	"board.help.calculator.result": "The minimum calculation value can't be lower than 0",
-	"board.help.calculator.history": "Tap on the Equals button to add value to the calculation history. This value will be automatically updated if you update according params on your board.",
-	"app.outdated.title": "Version is outdated",
-	"app.outdated.text": "Update is required",
-	"modal.spoiler.message": "This section contains campaign spoilers. Do you want to proceed?",
+  "board.help.calculator.result": "The minimum calculation value can't be lower than 0",
+  "board.help.calculator.history": "Tap on the Equals button to add value to the calculation history. This value will be automatically updated if you update according params on your board.",
+  "app.outdated.title": "Version is outdated",
+  "app.outdated.text": "Update is required",
+  "modal.spoiler.message": "This section contains campaign spoilers. Do you want to proceed?",
 
-	"picker.deceleration.fast": "Fast",
-	"picker.deceleration.normal": "Normal",
-	"picker.deceleration.instant": "Instant",
+  "picker.deceleration.fast": "Fast",
+  "picker.deceleration.normal": "Normal",
+  "picker.deceleration.instant": "Instant",
 
-	"board.reset.text": "This action will reset the data to the beginning of the game for this investigator",
-	"board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
+  "board.reset.text": "This action will reset the data to the beginning of the game for this investigator",
+  "board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
 
-	"board.help.press.main": "Decrease value by 1",
-	"board.help.press.action": "Decrease value by 1. If value is 0, resets counter to its base value",
+  "board.help.press.main": "Decrease value by 1",
+  "board.help.press.action": "Decrease value by 1. If value is 0, resets counter to its base value",
 
-	"board.help.press.undo": "Undo last action",
-	"board.help.press.redo": "Redo last action",
+  "board.help.press.undo": "Undo last action",
+  "board.help.press.redo": "Redo last action",
 
-	"board.help.press.skills": "Opens skill calculator",
+  "board.help.press.skills": "Opens skill calculator",
 
-	"board.help.press.reset": "Resets investigator stats to their default values",
+  "board.help.press.reset": "Resets investigator stats to their default values",
 
-	"board.help.hold.freeArea": "Tap and hold anywhere on the screen to see the taken damage and horror. You can also view the difference between base and actiual skill values",
+  "board.help.hold.freeArea": "Tap and hold anywhere on the screen to see the taken damage and horror. You can also view the difference between base and actiual skill values",
 
-	"board.help.longPress.main": "Shows/hides modifier counter. You can change base value (e.g. permanent +1 health, -2 sanity)",
-	"board.help.longPress.secondary": "Resets value to 0",
+  "board.help.longPress.main": "Shows/hides modifier counter. You can change base value (e.g. permanent +1 health, -2 sanity)",
+  "board.help.longPress.secondary": "Resets value to 0",
 
-	"board.help.longPress.redo": "Sets change history to the last change",
-	"board.help.longPress.undo": "Sets change history to the first change",
+  "board.help.longPress.redo": "Sets change history to the last change",
+  "board.help.longPress.undo": "Sets change history to the first change",
 
-	"board.help.calculator.toggleKeyboard": "Shows/hides keyboard",
-	"board.help.calculator.clearHistory": "Clears skill check history",
+  "board.help.calculator.toggleKeyboard": "Shows/hides keyboard",
+  "board.help.calculator.clearHistory": "Clears skill check history",
 
-	"board.help.special.additionalAction": "Some investigators have additional actions. Tap on this icon to mark action as completed",
-	"board.help.special.lola": "Tap on the name to change Lola's current role (faction)",
+  "board.help.special.additionalAction": "Some investigators have additional actions. Tap on this icon to mark action as completed",
+  "board.help.special.lola": "Tap on the name to change Lola's current role (faction)",
 
-	"board.help.chaosBag": "Tap and hold on a skill value to reveal a chaos token",
-	"board.help.chaosBag.returnAll": "Return all revealed tokens to the chaos bag",
-	"board.help.chaosBag.return": "[token_symbol_fill] - Return all revealed tokens to the chaos bag (exceping [bless] and [curse])",
-	"board.help.chaosBag.token.press": "Tap on a revealed token to return it to the chaos bag (or remove if it is [bless] or [curse])",
-	"board.help.chaosBag.token.longPress": "Long press on a revealed token to seal it",
-	"board.help.chaosBag.oneMore": "Tap to reveal one more token",
-	"board.help.calculator.chaosToken": "Tap to reveal a chaos token for the last calculation",
+  "board.help.chaosBag": "Tap and hold on a skill value to reveal a chaos token",
+  "board.help.chaosBag.returnAll": "Return all revealed tokens to the chaos bag",
+  "board.help.chaosBag.return": "[token_symbol_fill] - Return all revealed tokens to the chaos bag (exceping [bless] and [curse])",
+  "board.help.chaosBag.token.press": "Tap on a revealed token to return it to the chaos bag (or remove if it is [bless] or [curse])",
+  "board.help.chaosBag.token.longPress": "Long press on a revealed token to seal it",
+  "board.help.chaosBag.oneMore": "Tap to reveal one more token",
+  "board.help.calculator.chaosToken": "Tap to reveal a chaos token for the last calculation",
 
-	"board.help.press.chaosBag": "Chaos bag contents",
-	"board.help.longPress.chaosBag": "Reveals a chaos token",
+  "board.help.press.chaosBag": "Chaos bag contents",
+  "board.help.longPress.chaosBag": "Reveals a chaos token",
 
-	"settings.sound": "Sound (Beta)",
+  "settings.sound": "Sound (Beta)",
 
-	"tapOnPin.default": "Tap on a calculation to unpin it",
-	"tapOnPin.advanced": "Tap on a calculation to close the whole block. Swipe right to unpin",
+  "tapOnPin.default": "Tap on a calculation to unpin it",
+  "tapOnPin.advanced": "Tap on a calculation to close the whole block. Swipe right to unpin",
 
-	"modal.skillCheck.clear": "Clear history?",
-	"modal.skillCheck.clear.text": "This action will permanently delete the history of skill checks.",
+  "modal.skillCheck.clear": "Clear history?",
+  "modal.skillCheck.clear.text": "This action will permanently delete the history of skill checks.",
 
-	"board.help.calculator.buttons": "Swiping up on numbers 1-9 starts a skill check and adds that number to the check. Swiping down subtracts a number from the check. Hold 0 or tap the yellow icon at the top to start a skill check without any modifiers.\nHold the Equals button to save the calculation and immediately run a skill check using the resulting value",
+  "board.help.calculator.buttons": "Swiping up on numbers 1-9 starts a skill check and adds that number to the check. Swiping down subtracts a number from the check. Hold 0 or tap the yellow icon at the top to start a skill check without any modifiers.\nHold the Equals button to save the calculation and immediately run a skill check using the resulting value",
 
-	"board.help.calculator.expression": "Swiping right or left on the current formula deletes the last character in the calculation",
+  "board.help.calculator.expression": "Swiping right or left on the current formula deletes the last character in the calculation",
 
-	"newGame.start.title": "Start new game?",
-	"newGame.start.text": "This action permanently remove your last game data",
+  "newGame.start.title": "Start a new game?",
+  "newGame.start.text": "This action permanently remove your last game data",
 
-	"board.help.swipe.chaosBag": "Swipe right to reveal a chaos token. Swipe down to open see a reveal history page",
-	"board.help.press.clue": "Increase value by 1",
+  "board.help.swipe.chaosBag": "Swipe right to reveal a chaos token. Swipe down to open see a reveal history page",
+  "board.help.press.clue": "Increase value by 1",
 
-	"board.help.pins.swipe": "Swipe down on a pinned calculation to go to a page where you've created this calculation",
-	"board.help.longPress.investigatorSelect": "If you are playing with 2+ investigators, hold down on the mini image to view all investigators' stats",
+  "board.help.pins.swipe": "Swipe down on a pinned calculation to go to a page where you've created this calculation",
+  "board.help.longPress.investigatorSelect": "If you are playing with 2+ investigators, hold down on the mini image to view all investigators' stats",
 
-	"Swipe gestures": "Свайпы",
+  "Swipe gestures": "Свайпы",
 
-	"Show initial Health/Sanity": "Show initial Health/Sanity",
+  "Show initial Health/Sanity": "Show initial Health/Sanity",
 
-	"Chaos bag loading animation": "Chaos bag loading animation",
+  "Chaos bag loading animation": "Chaos bag loading animation",
 
-	"Show calculation changes": "Show calculation changes",
+  "Show calculation changes": "Show calculation changes",
 
-	"Skill modfiers": "Skill modfiers",
+  "Skill modfiers": "Skill modfiers",
 
-	"Give action": "Give action",
-	"Not selected": "Not selected",
-	"Add wild": "Add wild",
-	"Keep awake": "Keep awake",
-	"Track Hand Size": "Track Hand Size",
-	"Doom": "Doom",
-	"General": "General",
-	"Sound Effects": "Sound Effects",
-	"Volume": "Volume",
+  "Give action": "Give action",
+  "Not selected": "Not selected",
+  "Add wild": "Add wild",
+  "Keep awake": "Keep awake",
+  "Track Hand Size": "Track Hand Size",
+  "Doom": "Doom",
+  "General": "General",
+  "Sound Effects": "Sound Effects",
+  "Volume": "Volume",
 
-	"New Game": "New Game",
-	"Versions": "Versions",
-	"Skins": "Skins",
-	"About": "About",
-	"Help": "Help",
+  "New Game": "New Game",
+  "Versions": "Versions",
+  "Skins": "Skins",
+  "About": "About",
+  "Help": "Help",
 
-	"Scroll": "Scroll",
-	"Short Press": "Short Press",
-	"Long Press": "Long Press",
-	"Calculator": "Calculator",
-	"Equals": "Equals",
-	"XP": "XP",
-	"Track experience points": "Track experience points",
-	"Save trauma": "Save trauma",
+  "Scroll": "Scroll",
+  "Short Press": "Short Press",
+  "Long Press": "Long Press",
+  "Calculator": "Calculator",
+  "Equals": "Equals",
+  "XP": "XP",
+  "Track experience points": "Track experience points",
+  "Save trauma": "Save trauma",
 
-	"Loading fonts": "Loading fonts",
-	"Loading assets {{count}}/{{total}}": "Loading assets {{count}}/{{total}}",
-	"Haptic": "Haptic",
-	"Reset Board?": "Reset Board?",
-	"System (if available)": "System (if available)",
-	"Investigator Special Actions": "Investigator Special Actions",
-	"Press and hold": "Press and hold",
-	"Hold to seal": "Hold to seal",
-	"Hold": "Hold",
+  "Loading fonts": "Loading fonts",
+  "Loading assets {{count}}/{{total}}": "Loading assets {{count}}/{{total}}",
+  "Haptic": "Haptic",
+  "Reset Board?": "Reset Board?",
+  "System (if available)": "System (if available)",
+  "Investigator Special Actions": "Investigator Special Actions",
+  "Press and hold": "Press and hold",
+  "Hold to seal": "Hold to seal",
+  "Hold": "Hold",
 
-	"Health/Sanity": "Health/Sanity",
-	"Show health/sanity": "Show health/sanity",
-	"Show damage/horror": "Show damage/horror",
+  "Health/Sanity": "Health/Sanity",
+  "Show health/sanity": "Show health/sanity",
+  "Show damage/horror": "Show damage/horror",
 
-	"Spoiler Alert": "Spoiler Alert",
-	"Turn end": "Turn end",
+  "Spoiler Alert": "Spoiler Alert",
+  "Turn end": "Turn end",
 
-	"No main & additional actions": "No main & additional actions",
-	"No main actions": "No main actions",
+  "No main & additional actions": "No main & additional actions",
+  "No main actions": "No main actions",
 
-	"Damage/Horror visual effects": "Damage/Horror visual effects",
+  "Damage/Horror visual effects": "Damage/Horror visual effects",
 
-	"Scroll Deceleration": "Scroll Deceleration",
-	"Inertial Scrolling": "Inertial Scrolling",
+  "Scroll Deceleration": "Scroll Deceleration",
+  "Inertial Scrolling": "Inertial Scrolling",
 
-	"Behavior": "Behavior",
-	"Select Item": "Select Item",
-	"Show Game Text": "Show Game Text",
-	"Pinned calculations": "Pinned calculations",
-	"Game settings": "Game settings"
+  "Behavior": "Behavior",
+  "Select Item": "Select Item",
+  "Show Game Text": "Show Game Text",
+  "Pinned calculations": "Pinned calculations",
+  "Game settings": "Game settings"
 }
