feat: skill check difficulty

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -66,7 +66,8 @@
 	"modal.skillCheck.clear": "Очистить историю?",
 	"modal.skillCheck.clear.text": "Это действие безвозвратно удалит историю пройденных проверок",
 
-	"board.help.calculator.buttons": "Свайп вверх на цифрах 1-9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает число из проверки. Удерживайте 0 или нажмите на жёлтую иконку вверху, чтобы запустить проверку навыка.\nУдерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение",
+	"board.help.calculator.difficulty": "Введите число и удерживайте на нём нажатие для того, чтобы задать сложность проверки. Нажмите на иконку навыка наверху экрана, чтобы сбросить сложность проверки",
+	"board.help.calculator.buttons": "Свайп вверх на цифрах 0-9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает число из проверки.\nУдерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.\nУдерживайте нажатие на цифре для того, чтобы установить сложность проверки",
 
 	"board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте",
 
