--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -65,7 +65,8 @@
 	"modal.skillCheck.clear": "Clear history?",
 	"modal.skillCheck.clear.text": "This action will permanently delete the history of skill checks.",
 
-	"board.help.calculator.buttons": "Swiping up on numbers 1-9 starts a skill check and adds that number to the check. Swiping down subtracts a number from the check. Hold 0 or tap the yellow icon at the top to start a skill check without any modifiers.\nHold the Equals button to save the calculation and immediately run a skill check using the resulting value",
+	"board.help.calculator.difficulty": "Type a number and hold on to it to set a skill check difficulty. Press on a skill check icon at the top of the screen to clear the difficulty",
+	"board.help.calculator.buttons": "Swiping up on numbers 0-9 starts a skill check and adds that number to the check. Swiping down subtracts a number from the check.\nHold the Equals button to save the calculation and immediately run a skill check using the resulting value. Hold a button to set a skill check difficulty",
 
 	"board.help.calculator.expression": "Swiping right or left on the current formula deletes the last character in the calculation",
 
