feat: reference card base

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -79,8 +79,6 @@
 	"board.help.pins.swipe": "Swipe down on a pinned calculation to go to a page where you've created this calculation",
 	"board.help.longPress.investigatorSelect": "If you are playing with 2+ investigators, hold down on the mini image to view all investigators' stats",
 
-	"Swipe gestures": "Свайпы",
-
 	"Show initial Health/Sanity": "Show initial Health/Sanity",
 
 	"Chaos bag loading animation": "Chaos bag loading animation",
@@ -140,8 +138,9 @@
 	"Inertial Scrolling": "Inertial Scrolling",
 
 	"Behavior": "Behavior",
-	"Select Item": "Select Item",
 	"Show Game Text": "Show Game Text",
 	"Pinned calculations": "Pinned calculations",
-	"Game settings": "Game settings"
+	"Game settings": "Game settings",
+
+	"Select a campaign": "Select a campaign"
 }
