feat: reference card selection

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -142,5 +142,6 @@
 	"Pinned calculations": "Pinned calculations",
 	"Game settings": "Game settings",
 
-	"Select a campaign": "Select a campaign"
+	"Select a campaign": "Select a campaign",
+	"Back Text": "Текст на обратной стороне"
 }
