--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -74,7 +74,7 @@
 	"newGame.start.title": "Начать новую игру?",
 	"newGame.start.text": "Это действие удалит данные о последней игре",
 
-	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок",
+	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария",
 	"board.help.press.clue": "Увеличивает значение на 1",
 	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, удерживайте нажатие на мини-изображении, чтобы посмотреть параметры всех сыщиков",
 
