--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -51,6 +51,8 @@
 	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
 	"board.help.chaosBag.token.longPress": "Удерживайте нажатие на вытянутом жетоне, чтобы его запечатать",
 	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
+	"board.help.chaosBag.swipe": "Свайп вниз на вытянутом жетоне покажет эффект жетого жетона (если он есть и подключена памятка сценария)",
+
 	"board.help.calculator.chaosToken": "Нажмите, чтобы вытянуть жетон хаоса для проверки навыка по последнему расчёту",
 
 	"board.help.press.chaosBag": "Показывает содержимое мешка хаоса",
