feat: negative health / overview initial values

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -145,5 +145,7 @@
 	"Game settings": "Game settings",
 
 	"Select a campaign": "Select a campaign",
-	"Back Text": "Текст на обратной стороне"
+	"Back Text": "Текст на обратной стороне",
+
+	"Negative health/sanity": "Negative health/sanity"
 }
