feat: rearrange settings

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -84,11 +84,11 @@
 
 	"Skill modfiers": "Модификаторы навыков",
 
-	"Show initial Health/Sanity": "Исходные здоровье/рассудок",
+	"Initial values": "Исходные значения",
 
 	"Show calculation changes": "Изменения вычислений",
 
-	"Negative health/sanity": "Отрицательные здоровье/рассудок",
+	"Negative values": "Отрицательные значения",
 
 	"Show Game Text": "Игровой текст",
 	"Advanced": "Продвинутый режим",
