fix: inline translation

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -74,7 +74,7 @@
 	"board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте",
 
 	"newGame.start.title": "Начать новую игру?",
-	"newGame.start.text": "Это действие удалит данные о последней игре",
+	"newGame.start.text": "Это действие удалит последнюю игру",
 
 	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария",
 	"board.help.press.clue": "Увеличивает значение на 1",
