feat: unlimited chaos bag content

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -147,5 +147,6 @@
 	"Select a campaign": "Select a campaign",
 	"Back Text": "Текст на обратной стороне",
 
-	"Negative health/sanity": "Negative health/sanity"
+	"Negative health/sanity": "Negative health/sanity",
+	"Unlimited chaos tokens": "Unlimited chaos tokens"
 }
