--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -152,5 +152,6 @@
 
 	"Select a campaign": "Выберите кампанию",
 
-	"Translated content": "На русском"
+	"Translated content": "На русском",
+	"Unlimited chaos tokens": "Неограниченный состав"
 }
