feat: variable image offsets / image version cache

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -153,5 +153,6 @@
 	"Select a campaign": "Выберите кампанию",
 
 	"Translated content": "На русском",
-	"Unlimited chaos tokens": "Неограниченный состав"
+	"Unlimited chaos tokens": "Неограниченный состав",
+	"Custom Content": "Личные материалы"
 }
