--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -148,5 +148,6 @@
 	"Back Text": "Текст на обратной стороне",
 
 	"Negative health/sanity": "Negative health/sanity",
-	"Unlimited chaos tokens": "Unlimited chaos tokens"
+	"Unlimited chaos tokens": "Unlimited chaos tokens",
+	"Custom Content": "Custom Content"
 }
