--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -1,158 +1,158 @@
 {
-	"app.outdated.title": "Приложение устарело",
-	"app.outdated.text": "Не так, как древние, но пора бы обновиться",
+  "app.outdated.title": "Приложение устарело",
+  "app.outdated.text": "Не так, как древние, но пора бы обновиться",
 
-	"picker.deceleration.fast": "Быстрое",
-	"picker.deceleration.normal": "Нормальное",
-	"picker.deceleration.instant": "Мгновенное",
-	"picker.deceleration.custom": "Настроить",
+  "picker.deceleration.fast": "Быстрое",
+  "picker.deceleration.normal": "Нормальное",
+  "picker.deceleration.instant": "Мгновенное",
+  "picker.deceleration.custom": "Настроить",
 
-	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
+  "board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
 
-	"board.help.press.main": "Уменьшает значение на 1",
-	"board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения",
+  "board.help.press.main": "Уменьшает значение на 1",
+  "board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения",
 
-	"board.help.press.undo": "Отменить последнее действие",
-	"board.help.press.redo": "Вернуться к предыдущему действию",
+  "board.help.press.undo": "Отменить последнее действие",
+  "board.help.press.redo": "Вернуться к предыдущему действию",
 
-	"board.help.press.skills": "Открывает калькулятор навыков",
+  "board.help.press.skills": "Открывает калькулятор навыков",
 
-	"board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
+  "board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков",
+  "board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков",
 
-	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
-	"board.help.longPress.secondary": "Сбрасывает значение до 0",
+  "board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
+  "board.help.longPress.secondary": "Сбрасывает значение до 0",
 
-	"board.help.longPress.redo": "Возвращает историю изменений к последней правке",
-	"board.help.longPress.undo": "Прокручивает историю изменений к начальному состоянию",
+  "board.help.longPress.redo": "Возвращает историю изменений к последней правке",
+  "board.help.longPress.undo": "Прокручивает историю изменений к начальному состоянию",
 
-	"board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру",
-	"board.help.calculator.clearHistory": "Очищает историю проверок",
+  "board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру",
+  "board.help.calculator.clearHistory": "Очищает историю проверок",
 
-	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
-	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
+  "board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
+  "board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
 
-	"board.help.calculator.result": "Минимальный результат - 0. Деление округляет результат в меньшую сторону",
-	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика.\nУдерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту",
-	"board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
-	"board.help.calculator.history.remove": "Удалить расчёт",
-	"board.help.calculator.history.setName": "Дать название расчёта",
-	"board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
+  "board.help.calculator.result": "Минимальный результат - 0. Деление округляет результат в меньшую сторону",
+  "board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика.\nУдерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту",
+  "board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
+  "board.help.calculator.history.remove": "Удалить расчёт",
+  "board.help.calculator.history.setName": "Дать название расчёта",
+  "board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
 
-	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
-	"board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
-	"board.help.pins.swipe": "Свайп вниз на закрплённым расчётом откроет калькулятор проверок для навыка с этим расчётом",
-	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
+  "board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
+  "board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
+  "board.help.pins.swipe": "Свайп вниз на закрплённым расчёте откроет калькулятор проверок для навыка с этим расчётом",
+  "board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
 
-	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие на значении навыка",
-	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
-	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
-	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
-	"board.help.chaosBag.token.longPress": "Удерживайте нажатие на вытянутом жетоне, чтобы его запечатать",
-	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
-	"board.help.chaosBag.swipe": "Свайп вниз на вытянутом жетоне покажет эффект жетого жетона (если он есть и подключена памятка сценария)",
+  "board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие на значении навыка",
+  "board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
+  "board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
+  "board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
+  "board.help.chaosBag.token.longPress": "Удерживайте нажатие на вытянутом жетоне, чтобы его запечатать",
+  "board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
+  "board.help.chaosBag.swipe": "Свайп вниз на вытянутом жетоне покажет эффект жетого жетона (если он есть и подключена памятка сценария)",
 
-	"board.help.calculator.chaosToken": "Нажмите, чтобы вытянуть жетон хаоса для проверки навыка по последнему расчёту",
+  "board.help.calculator.chaosToken": "Нажмите, чтобы вытянуть жетон хаоса для проверки навыка по последнему расчёту",
 
-	"board.help.press.chaosBag": "Показывает содержимое мешка хаоса",
-	"board.help.longPress.chaosBag": "Вытягивает жетон хаоса",
+  "board.help.press.chaosBag": "Показывает содержимое мешка хаоса",
+  "board.help.longPress.chaosBag": "Вытягивает жетон хаоса",
 
-	"settings.sound": "Звук (Beta)",
+  "settings.sound": "Звук (Beta)",
 
-	"tapOnPin.default": "Нажмите на расчёте, чтобы его убрать",
-	"tapOnPin.advanced": "Нажмите на расчёте, чтобы скрыть блок. Свайп вправо убирает расчёт",
+  "tapOnPin.default": "Нажмите на расчёте, чтобы его убрать",
+  "tapOnPin.advanced": "Нажмите на расчёте, чтобы скрыть блок. Свайп вправо убирает расчёт",
 
-	"modal.spoiler.message": "Этот раздел содержит сюжетные спойлеры. Продолжить?",
+  "modal.spoiler.message": "Этот раздел содержит сюжетные спойлеры. Продолжить?",
 
-	"modal.skillCheck.clear": "Очистить историю?",
-	"modal.skillCheck.clear.text": "Это действие безвозвратно удалит историю пройденных проверок",
+  "modal.skillCheck.clear": "Очистить историю?",
+  "modal.skillCheck.clear.text": "Это действие безвозвратно удалит историю пройденных проверок",
 
-	"board.help.calculator.difficulty": "Введите число и удерживайте на нём нажатие для того, чтобы задать сложность проверки. Нажмите на иконку навыка наверху экрана, чтобы сбросить сложность проверки",
-	"board.help.calculator.buttons": "Свайп вверх на цифрах 0-9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает число из проверки.\nУдерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.\nУдерживайте нажатие на цифре для того, чтобы установить сложность проверки",
+  "board.help.calculator.difficulty": "Введите число и удерживайте на нём нажатие для того, чтобы задать сложность проверки. Нажмите на иконку навыка наверху экрана, чтобы сбросить сложность проверки",
+  "board.help.calculator.buttons": "Свайп вверх на цифрах 0-9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает число из проверки.\nУдерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.\nУдерживайте нажатие на цифре для того, чтобы установить сложность проверки",
 
-	"board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте",
+  "board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте",
 
-	"newGame.start.title": "Начать новую игру?",
-	"newGame.start.text": "Это действие удалит последнюю игру",
+  "newGame.start.title": "Начать новую игру?",
+  "newGame.start.text": "Это действие удалит последнюю игру",
 
-	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария",
-	"board.help.press.clue": "Увеличивает значение на 1",
-	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, удерживайте нажатие на мини-изображении, чтобы посмотреть параметры всех сыщиков",
+  "board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария",
+  "board.help.press.clue": "Увеличивает значение на 1",
+  "board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, удерживайте нажатие на мини-изображении, чтобы посмотреть параметры всех сыщиков",
 
-	"Swipe gestures": "Свайпы",
+  "Swipe gestures": "Свайпы",
 
-	"Skill modfiers": "Модификаторы навыков",
+  "Skill modfiers": "Модификаторы навыков",
 
-	"Initial values": "Исходные значения",
+  "Initial values": "Исходные значения",
 
-	"Show calculation changes": "Изменения вычислений",
+  "Show calculation changes": "Изменения вычислений",
 
-	"Negative values": "Отрицательные значения",
+  "Negative values": "Отрицательные значения",
 
-	"Show Game Text": "Игровой текст",
-	"Advanced": "Продвинутый режим",
-	"Pinned calculations": "Закреплённые расчёты",
+  "Show Game Text": "Игровой текст",
+  "Advanced": "Продвинутый режим",
+  "Pinned calculations": "Закреплённые расчёты",
 
-	"Chaos bag loading animation": "Анимация мешка хаоса",
-	"Content Type": "Контент",
+  "Chaos bag loading animation": "Анимация мешка хаоса",
+  "Content Type": "Контент",
 
-	"Give an action": "Дать действие",
-	"Not selected": "Не выбрано",
-	"Add wild": "Добавить ? значение",
-	"Keep awake": "Предотвратить спящий режим",
-	"Hand Size": "Размер руки",
-	"Doom": "Безысходность",
-	"General": "Основное",
-	"Volume": "Громкость",
+  "Give an action": "Дать действие",
+  "Not selected": "Не выбрано",
+  "Add wild": "Добавить ? значение",
+  "Keep awake": "Предотвратить спящий режим",
+  "Hand Size": "Размер руки",
+  "Doom": "Безысходность",
+  "General": "Основное",
+  "Volume": "Громкость",
 
-	"New Game": "Новая игра",
-	"Versions": "Версии",
-	"Skins": "Обложки",
-	"About": "О приложении",
-	"Help": "Справка",
+  "New Game": "Новая игра",
+  "Versions": "Версии",
+  "Skins": "Обложки",
+  "About": "О приложении",
+  "Help": "Справка",
 
-	"Scroll": "Прокрутка",
-	"Short Press": "Короткое нажатие",
-	"Long Press": "Долгое нажатие",
-	"Calculator": "Калькулятор",
-	"Equals": "Считать",
-	"XP": "Опыт",
-	"Track experience points": "Отслеживать очки опыта",
-	"Save trauma": "Сохранять травмы",
+  "Scroll": "Прокрутка",
+  "Short Press": "Короткое нажатие",
+  "Long Press": "Долгое нажатие",
+  "Calculator": "Калькулятор",
+  "Equals": "Считать",
+  "XP": "Опыт",
+  "Track experience points": "Отслеживать очки опыта",
+  "Save trauma": "Сохранять травмы",
 
-	"Loading fonts": "Загрузка шрифтов",
-	"Loading assets {{count}}/{{total}}": "Загрузка текстур {{count}}/{{total}}",
-	"Haptic": "Вибрация",
-	"Reset Board?": "Сбросить данные?",
-	"System (if available)": "Системная (если есть)",
-	"board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
-	"Investigator Special Actions": "Специальные действия",
-	"Press and hold": "Нажмите и удерживайте",
-	"Hold to seal": "Удерживайте, чтобы запечатать",
-	"Hold": "Удерживайте",
+  "Loading fonts": "Загрузка шрифтов",
+  "Loading assets {{count}}/{{total}}": "Загрузка текстур {{count}}/{{total}}",
+  "Haptic": "Вибрация",
+  "Reset Board?": "Сбросить данные?",
+  "System (if available)": "Системная (если есть)",
+  "board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
+  "Investigator Special Actions": "Специальные действия",
+  "Press and hold": "Нажмите и удерживайте",
+  "Hold to seal": "Удерживайте, чтобы запечатать",
+  "Hold": "Удерживайте",
 
-	"Health/Sanity": "Здоровье/Рассудок",
-	"Show health/sanity": "Показать здоровье/рассудок",
-	"Show damage/horror": "Показать раны/ужас",
+  "Health/Sanity": "Здоровье/Рассудок",
+  "Show health/sanity": "Показать здоровье/рассудок",
+  "Show damage/horror": "Показать раны/ужас",
 
-	"Spoiler Alert": "Осторожно, спойлеры!",
-	"Turn end": "Конец хода",
+  "Spoiler Alert": "Осторожно, спойлеры!",
+  "Turn end": "Конец хода",
 
-	"No main & additional actions": "Нет основных и доп. действий",
-	"No main actions": "Нет основных действий",
+  "No main & additional actions": "Нет основных и доп. действий",
+  "No main actions": "Нет основных действий",
 
-	"Damage/Horror visual effects": "Эффекты ран/ужаса",
+  "Damage/Horror visual effects": "Эффекты ран/ужаса",
 
-	"Scroll Deceleration": "Замедление прокрутки",
-	"Inertial Scrolling": "Инерция при прокрутке",
+  "Scroll Deceleration": "Замедление прокрутки",
+  "Inertial Scrolling": "Инерция при прокрутке",
 
-	"Behavior": "Поведение",
-	"Game settings": "Игра",
+  "Behavior": "Поведение",
+  "Game settings": "Игра",
 
-	"Select a campaign": "Выберите кампанию",
+  "Select a campaign": "Выберите кампанию",
 
-	"Translated content": "На русском",
-	"Unlimited chaos tokens": "Неограниченный состав",
-	"Custom Content": "Личные материалы"
+  "Translated content": "На русском",
+  "Unlimited chaos tokens": "Неограниченный состав",
+  "Custom Content": "Личные материалы"
 }
