feat: enable/disable counter ability

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -154,5 +154,13 @@
 
 	"Translated content": "На русском",
 	"Unlimited chaos tokens": "Неограниченный состав",
-	"Custom Content": "Личные материалы"
+	"Custom Content": "Личные материалы",
+
+	"Bounty Contracts": "Награды за головы",
+	"Family Inheritance": "Семейное наследство",
+
+	"Ravenous Tracker": "Ravenous Tracker",
+	"Cards beneath George": "Cards beneath George",
+	"Cards beneath Diana": "Карты под сыщиком",
+	"Cards beneath Gloria": "Карты под сыщиком"
 }
